# ShorTor

./: .gitmodules  README.md
MaTor-ShorTor/: CMakeLists.txt  README.md  Ubuntu-Install.sh
MaTor-ShorTor/data/: config.json
MaTor-ShorTor/mator-db/: download-year.sh  installdb.sh
MaTor-ShorTor/mator-db/src/: db.go  files.go  geo.go  main.go  parser.go  sorting.go
MaTor-ShorTor/mator-db/src/asn/: asn.go
MaTor-ShorTor/scripts/: construct_database.py  database.py  download_consensus.py  moneyadv.py  testmator.py  worklist-example.py  worklist-mator.py  worklist-shortor.py  worklist.py
MaTor-ShorTor/scripts/mator/: __init__.py
MaTor-ShorTor/scripts/threading2/: t2_posix.py
MaTor-ShorTor/src/: CMakeLists.txt  addedNodeList.cpp  addedNodeList.h  adversary.hpp  asmap.cpp  asmap.hpp  config.hpp  consensus.cpp  consensus.hpp  costmap.cpp  costmap.hpp  db_connection.cpp  db_connection.hpp  filter.hpp  generic_precise_anonymity.cpp  generic_precise_anonymity.hpp  generic_worst_case_anonymity.cpp  generic_worst_case_anonymity.hpp  ip.cpp  ip.hpp  json.hpp  main_dev.cpp  maintest.cpp  mator.cpp  mator.hpp  newNodePS.cpp  newNodePS.h  path_selection.hpp  path_selection_spec.hpp  path_selection_standard.cpp  path_selection_standard.hpp  pcf.cpp  pcf.hpp  pcf_parser.cpp  pcf_parser.hpp  preciseMain.cpp  ps_distributor.cpp  ps_distributor.hpp  ps_lastor.cpp  ps_lastor.hpp  (+19 more)
MaTor-ShorTor/src/SimpleJSON/: JSON.h  JSONValue.cpp  JSONValue.h
MaTor-ShorTor/src/types/: const_vector.hpp  general_exception.hpp  symmetric_matrix.hpp  work_manager.cpp  work_manager.hpp
MaTor-ShorTor/test/: CMakeLists.txt  stdafx.h  test_consensus.cpp  test_db_connection.cpp  test_ip.cpp  test_mator.cpp  test_pcf_parser.cpp  test_relay.cpp  test_runner.cpp  test_types_symmetric_matrix.cpp  test_types_work_manager.cpp
MaTor-ShorTor/test/Data/: 2014-10-04-05-00-00-consensus-filtered  2014-10-04-05-00-00-consensus-filtered-fast  test_consensus.txt  test_database.sqlite  test_viamap.csv
Measurements/: .gitignore  .pylintrc  README.md  Vagrantfile  num-measurements.sql  requirements-dev.txt  requirements-test.txt  requirements.txt  run.sh  shell.nix  shortor.conf-vagrant  test_vagrant.sh  tor_babysitting.org
Measurements/devops/: Vagrantfile  gen_certs.sh  install_chutney.sh  install_consensus_taker.sh  install_observer.sh  install_postgres.sh  install_redis.sh  install_shortor.sh  install_throttle.sh  main.pkr.hcl  main.tf  run_shortor_python.sh  shortor.conf-vagrant  torrc-runtime  torrc-runtime.prod  versions.tf
Measurements/latencies/: celery.py  celeryconfig.py  check_exit_in_consensus.py  compute_triplets.py  consensus.py  consensus_taker.py  db.py  make_consensus.py  models.py  observer.py  ripelatencies.py  spot_check.py  tasks.py  ting-relays.json  uptimes.py
Measurements/tests/: ripelatencies_test.py  test_consensus.py
Measurements/tests/data/: consensus.txt  fake-consensus.txt
